[ECO-2002] Fix alignment of featured market emoji (#173)

--- a/src/typescript/frontend/src/components/pages/home/components/main-card/module.css
+++ b/src/typescript/frontend/src/components/pages/home/components/main-card/module.css
@@ -14,14 +14,17 @@
   animation: image-pulse 4s infinite ease-in-out;
 }
 
-div#styled-emoji {
+div.styled-emoji {
   position: absolute;
   color: white;
   left: 61%;
   transform: translateX(-50%);
-  font-size: 51px;
   line-height: unset;
   padding-top: 8px;
+}
+
+div.styled-single-emoji {
+  font-size: 51px;
 
   @media screen and (min-width: 578px) {
     font-size: 74px;
@@ -47,13 +50,8 @@ div#styled-emoji {
   }
 }
 
-div#styled-double-emoji {
-  position: absolute;
-  left: 61%;
-  transform: translateX(-50%);
+div.styled-double-emoji {
   font-size: 40px;
-  line-height: unset;
-  padding-top: 8px;
 
   @media screen and (min-width: 578px) {
     font-size: 60px;
